--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,10 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MICROPHONE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
 
+    <uses-permission android:name="android.permission.USE_EXACT_ALARM" tools:ignore="UnusedAttribute" />
+
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
@@ -74,10 +78,11 @@
         android:roundIcon="@drawable/cdot_splash_rounded"
         android:supportsRtl="true"
         android:theme="@style/BaseAppTheme"
-        tools:targetApi="31">
+        tools:targetApi="34">
         <activity
             android:name=".activities.voip.CallActivity"
-            android:exported="false" />
+            android:exported="false"
+            />
         <activity
             android:name=".activities.main.MainActivity"
             android:exported="true"
